@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2011,v 1.2306 2011/09/17 22:47:19 pettai Exp $
+$NetBSD: CHANGES-2011,v 1.2307 2011/09/17 23:02:23 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2011:
 
@@ -3609,3 +3609,10 @@ Changes to the packages collection and infrastructure in 2011:
 	Added print/tex-statex-doc version 1.6 [minskim 2011-09-17]
 	Added print/tex-subfigmat version 1.0 [minskim 2011-09-17]
 	Added print/tex-subfigmat-doc version 1.0 [minskim 2011-09-17]
+	Added print/tex-2up version 1.3 [minskim 2011-09-18]
+	Added print/tex-2up-doc version 1.3 [minskim 2011-09-18]
+	Added print/tex-guide-to-latex version 2011 [minskim 2011-09-18]
+	Added print/tex-xcomment version 1.3 [minskim 2011-09-18]
+	Added print/tex-xcomment-doc version 1.3 [minskim 2011-09-18]
+	Added print/tex-seminar version 1.5 [minskim 2011-09-18]
+	Added print/tex-seminar-doc version 1.5 [minskim 2011-09-18]
